change app name to be lower case

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Fri Nov 28 09:51:22 PST 2014
 app.grails.version=2.4.4
-app.name=GrailsHubbub
+app.name=grailshubbub
 app.version=0.1
