--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri Nov 28 09:51:22 PST 2014
-app.grails.version=2.4.4
+#Fri Dec 12 05:49:53 PST 2014
+app.grails.version=2.3.7
 app.name=grailshubbub
+app.servlet.version=3.0
 app.version=0.1
